tests/forwarder.yaml
---
apiVersion: serving.knative.dev/v1beta1
kind: Service
metadata:
  name: wathola-forwarder
  namespace: event-example
  labels:
    purpose: testing
    serving.knative.dev/visibility: cluster-local
spec:
  template:
    spec:
      containers:
        - name: forwarder
          image: quay.io/cardil/wathola-forwarder:v0.7.0
          volumeMounts:
            - name: wathola-config
              mountPath: /.config/wathola
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz
      volumes:
        - name: wathola-config
          secret:
            secretName: wathola-config
