tests/receiver-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: wathola-receiver
  namespace: event-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: wathola-receiver.event-example.k8s.internal
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: wathola-receiver
          servicePort: 80
