tests/receiver-openshift.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wathola-receiver
  namespace: event-example
spec:
  to:
    kind: Service
    name: wathola-receiver
  port:
    targetPort: http
