tests/receiver.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wathola-receiver
  namespace: event-example
  labels:
    app: wathola-receiver
    purpose: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wathola-receiver
  template:
    metadata:
      labels:
        app: wathola-receiver
    spec:
      containers:
        - name: receiver
          image: quay.io/cardil/wathola-receiver:v0.7.0
          volumeMounts:
            - name: wathola-config
              mountPath: /.config/wathola
              readOnly: true
      volumes:
        - name: wathola-config
          configMap:
            name: wathola-config
---
kind: Service
apiVersion: v1
metadata:
  name: wathola-receiver
  namespace: event-example
  labels:
    purpose: testing
spec:
  selector:
    app: wathola-receiver
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 22111
